    the current status file is already backupped. Thanks to Leo 'costela'
    Antunes <costela@debian.org> for the patch. Closes: #541412
  * Change behaviour of dpkg --merge-avail to not update a package's
    information if the version provided is older than the one already listed
    in the available file. Thanks to Ian Jackson
    <ian@davenant.greenend.org.uk> for the patch. Closes: #496114

  [ Modestas Vainius ]
  * Provide a meaningful label for dpkg-gensymbols diff.

  [ Updated dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #535327
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #536538
  * Slovak (Ivan Masár). Closes: #537742
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Slovak (Ivan Masár). Closes: #537741

  [ Updated man page translations ]
  * French completed (Christian Perrier).
  * German (Helge Kreutzmann), proofreading by Jens Seidel.
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French completed (Christian Perrier).
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200

dpkg (1.15.3.1) unstable; urgency=low

  [ Modestas Vainius ]
  * Fix wildcard support in symbol files. Closes: #536034

 -- Guillem Jover <guillem@debian.org>  Wed, 08 Jul 2009 11:26:36 +0200

dpkg (1.15.3) unstable; urgency=low

  [ Guillem Jover ]
  * Unset TAR_OPTIONS when extracting .deb archives.
  * Use default compressor values in dpkg-source from Dpkg::Source::Compressor.
  * Fix dpkg-scanpackages to properly detect spurious overrides.
  * Rewrite dpkg-name in perl.
  * Do not close already closed files in some error conditions in libdpkg.
  * Use the correct units (KiB) in dpkg-split when referring to partsize.
  * Document in dpkg-statoverride(8) that mode needs to be specified in
    octal. Closes: #534551
  * Mark argument names in dpkg-statoverride.1 in italic.