@@ -12,6 +12,8 @@
 # targets in ‘dpkg-architecture’.
 # Column 3 is an extended regular expression used to match against the
 # CPU part of the output of the GNU config.guess script.
+# Column 4 is the size (in bits) of the integers/pointers
+# Column 5 is the endianness (byte ordering in numbers)
 #
 # <Debian name>	<GNU name>	<config.guess regex>	<Bits>	<Endianness>
 i386		i486		(i[3456]86|pentium)	32	little
